include actual difficult score
